[package]
name = "quiz-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
serde = {version = "1.0.0", features = ["derive"]}
solana-client = "2.3.2"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.45.1"
tower-http = {version = "0.6.6", features = ["cors"]}
